# simple_logger

./: CMakeLists.txt  README.md  makefile  mfc.conf
doc/: architecture.md
include/: logger.hpp
src/: format.cpp  format.hpp  logger.cpp  logger.hpp
test/: main.cpp
